--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -27,7 +27,7 @@
          <div id="insider_info">
             <h2>Надійний інсайдер розкрив перші подробиці про The Last Of Us 3</h2>
             <p>Розробка нової частини вже йде повним ходом. Пізніше цього року розпочнеться запис звуку та захоплення рухів для гри.</p>
-            <img width="1000" src="/img/1688383138-1416.jpg" alt="чоловік на коні">
+            <img width="1000" src="img/1688383138-1416.jpg" alt="чоловік на коні">
             <p>Минулого року <mark>Naughty Dog</mark> неодноразово повідомляла про роботу над декількома проєктами. Одним з них виявився ремейк The Last Of Us, а іншим стане багатокористувацька гра у всесвіті TLoU. Також студія вже працює над повноцінним продовженням серії.</p>
             <p>Чутками про розробку <span>The Last Of Us Part 3</span> поділилися відразу два інсайдери з кіноіндустрії – DanielRPK і ViewerAnon. Останній ще торік повідомляв, що в розробці знаходиться третя частина серії.
                <br>
